# exjobb

./: .gitattributes  .gitignore  .gitmodules  TODO  TODO.markdown  TODO.md
CV/English/: compile  main.aux  main.out  main.tex
LTH/presentation/: Presentation.pptx
career/: interview-questions.txt  kompetenser.txt
data/: compression_ratio.txt
ericsson/: remote-locations.txt
ericsson/excel/: EvalGTexample.xlsx
ericsson/powerpoint/: Common scripts for video coding simulations.ppt
ericsson/reports/: Guided transcoding for ABR video distribution_PA3.docx
hevc_transcoding-eharano/VideoSimScript/: BDelta.py  ExcelChart.vbs  ExcelPlot.py  PERSONAL.XLS  RunEncodingGeneric.py  RunEvalGeneric.py  RunSimDefinitions.py  RunSimHM16.6.py  calcMD5CheckSum.py  cfgFile.py  jobCtrl.py  psnr.py  run.bat  run.sh  stopwatch.py  testSeqs.py  verifyMD5CheckSums.py
hevc_transcoding-eharano/software/d65mt_dev/: CMakeLists.txt
hevc_transcoding-eharano/software/d65mt_dev/Pre-built.2/include/: openHevcWrapper.h
hevc_transcoding-eharano/software/d65mt_dev/d65_dec/: d65_dec.vcproj  decoder.c
hevc_transcoding-eharano/software/d65mt_dev/d65_dec/Release/: BuildLog.htm
hevc_transcoding-eharano/software/d65mt_dev/d65_lib/: d65_api.h  d65_deblocking_filter.c  d65_decode_ps.h  d65_decode_pu.c  d65_decode_pu.h  d65_decode_tu.c  d65_dpb.c  d65_getbits.h  d65_init.c  d65_inter_prediction.c  d65_internal.h  d65_lib.vcproj  d65_transform_reconstruct.c
hevc_transcoding-eharano/software/d65mt_dev/d65_lib/Release/: BuildLog.htm
hevc_transcoding-eharano/software/d65mt_dev/export/visualcom/: d65_in_mumca.patch
hevc_transcoding-eharano/software/d65mt_dev/scripts/: TestBiterrors.pl
hevc_transcoding-eharano/software/d65mt_dev/scripts/applybiterrors/: applybiterrors.vcproj
lth/måldokument/: TODO  (+2 more)
lägenhet lund/: Untitled Document
mejl till LTH/: översätta exjobbsfrågor
måldokument/: måldokument.odt
opposition/: opposition-oral.markdown  opposition-written.markdown
pop-vet/: Adaptiv-video-streaming-för-framtiden-jennie.doc  Bättre och effektivare videostreaming.docx  Framtidens adaptiva videostreaming.doc  adaptativo.eps
rapport/: bibliography.bib  compile  compile.bat  cslthse-msc.cls  open-all  rapport.aux  rapport.out  rapport.tex  rapport.toc
reading/: bsub_arguments.txt  links.txt  notes.markdown
(+327 files in other folders)
