cmake_minimum_required(VERSION 2.8)
project(d65)

#default install folder
#SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})

# Install all headers
OPTION(INSTALL_HEADERS "Set to ON to install headers." OFF)
IF(INSTALL_HEADERS)
  OPTION(EXPORT_INTERNAL_DATA "Set to ON to export/install d65_internal.h." OFF)
ENDIF()
MACRO (INSTALL_ALL_HEADERS)
IF(INSTALL_HEADERS)
  INSTALL(FILES d65_lib/d65_api.h
          DESTINATION include
          COMPONENT headers)
  IF(EXPORT_INTERNAL_DATA)
    INSTALL(FILES d65_lib/d65_internal.h
            DESTINATION include
            COMPONENT headers)
  ENDIF()
ENDIF()
ENDMACRO()

#FIND_PACKAGE(SSE)  # defines SSE_FLAGS
#set(CMAKE_CXX_FLAGS ${SSE_FLAGS})

IF (WIN32)
  SET(PTHREAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Pre-built.2 CACHE STRING "Pthread directory")
  SET(PTHREAD_INCLUDE ${PTHREAD_DIR}/include)
  SET(PTHREAD_LIB_DIR ${PTHREAD_DIR}/lib/x86)
  SET(PTHREAD_LIBS pthreadVC2)
ELSE(WIN32)
  FIND_PACKAGE(Threads)
  SET(PTHREAD_LIBS pthread)
ENDIF(WIN32)

# D65
INCLUDE_DIRECTORIES(d65_lib#for decoder app
                    ${PTHREAD_INCLUDE})

LINK_DIRECTORIES(${PTHREAD_LIB_DIR})
                    
FILE(GLOB D65LIB_SRC d65_lib/*.c)
# add headers
FILE(GLOB D65LIB_HDRS d65_lib/*.h)

ADD_LIBRARY(d65_lib STATIC ${D65LIB_SRC} ${D65LIB_HDRS})
TARGET_LINK_LIBRARIES(d65_lib ${PTHREAD_LIBS})
#IF(CMAKE_BUILD_TYPE MATCHES Debug)
#  SET_TARGET_PROPERTIES (d65_lib PROPERTIES PREFIX ${D65_DIR}/d65_lib/Debug/)
#ELSE(CMAKE_BUILD_TYPE MATCHES Debug)
#  SET_TARGET_PROPERTIES (d65_lib PROPERTIES PREFIX ${D65_DIR}/d65_lib/Release/)
#ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

# install exe
INSTALL(TARGETS d65_lib
  LIBRARY DESTINATION lib
  COMPONENT libraries
  ARCHIVE DESTINATION lib
  COMPONENT libraries
  RUNTIME DESTINATION bin
  COMPONENT libraries)
INSTALL_ALL_HEADERS()
# exe
FILE(GLOB D65DECODER_SRC d65_dec/*.c)
# add headers
FILE(GLOB D65DECODER_HDRS d65_dec/*.h)

ADD_EXECUTABLE(d65_dec ${D65DECODER_SRC} ${D65DECODER_HDRS})
TARGET_LINK_LIBRARIES(d65_dec d65_lib)
#SET_TARGET_PROPERTIES (d65_dec PROPERTIES PREFIX ${D65_DIR}/bin/)

# install exe
INSTALL(TARGETS d65_dec
  RUNTIME DESTINATION bin
  COMPONENT applications
)
